# RetroArcher

./: .flake8  .gitignore  Pipfile  README.md  mypy.ini  pyproject.toml  retroarcher.bat  retroarcher.sublime-project  setup.py
retroarcher/: games.py  main.py  render.py  settings.py
scripts/: runner.py  setup.py
tests/: test_main.py
tests/configs/: ergo.rmp  gamelist.json  mycomputer-settings.json
