[tool.poetry]
name = "RetroArcher"
version = "0.2.1"
description = "Generates playlists and remap files for RetroArch."
authors = ["Tim Simpson <timsimpson4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
taskipy = "^1.11.0"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
retroarcher = "retroarcher.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
black = "black retroarcher tests"
flake8 = "flake8 retroarcher tests"
mypy = "mypy retroarcher tests"
tests = "pytest -vv -x"
checks = "task black && task flake8 && task mypy && task tests"
